--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "development": "NODE_ENV=development webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "NODE_ENV=production webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "laravel-mix": "^6.0.49",
+    "laravel-mix-compress": "^3.0.0",
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
