--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/assets/app.js": "/assets/app.js",
-    "/assets/app.css": "/assets/app.css",
-    "/assets/app.min.css": "/assets/app.min.css"
+    "/assets/app.css": "/assets/app.css"
 }
