--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "@alpinejs/collapse": "^3.11.1",
     "alpinejs": "^3.11.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.58.3",
