--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -22,6 +22,7 @@
       "spacing_sections": 0,
       "spacing_grid_horizontal": 8,
       "spacing_grid_vertical": 8,
+      "border_radius": "rounded-none",
       "buttons_border_thickness": 1,
       "buttons_border_opacity": 100,
       "buttons_radius": 0,
